apps/routes/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-system

  hostnames:
    - grafana.lab.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: grafana
          port: 3000
