apps/routes/monitoring/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-system

  hostnames:
    - prometheus.lab.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: prometheus
          port: 9090
